--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kanpeki Sushi & Assian Food, Río Tercero, Córdoba. Delivery & Take Away.">
+    <meta name="keywords" content="sushi, entradas, comida asiatica, woks, rolls, sushi bolws">
+    <meta name="author" content="Mauricio Maldonado">
+    <meta name="copyright" content="kanpeki.sushi">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,900&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
