--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kanpeki Sushi & Assian Food, Río Tercero, Córdoba. Delivery & Take Away.">
+    <meta name="keywords" content="sushi, take away, delivery, local de comida, comida asiática">
+    <meta name="author" content="Mauricio Maldonado">
+    <meta name="copyright" content="kanpeki.sushi">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +20,7 @@
     <header>
 <!--inicio barra nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="../imagenes/logo.png" alt="logo"></a>
+            <a class="navbar-brand" href="#" id="inicio_contacto"><img src="../imagenes/logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +42,7 @@
             </div>
         </nav>
 <!--fin barra nav-->
-    <a href="#" class="boton_flotante" id="boton_conocenos"><img src="../imagenes/gatito.png" alt="gatito"></a>
+    <a href="#inicio_contacto" class="boton_flotante" id="boton_conocenos"><img src="../imagenes/gatito.png" alt="gatito"></a>
     </header>
     <main class="menu-main">
         <div class="menu-carta">
@@ -47,7 +51,7 @@
             </div>
         </div>
         <div>
-            <video width="100%" height="350" controls>
+            <video width="100%" height="550" controls>
                 <source src="../imagenes/videokanpeki.mp4" type="video/mp4">
             </video>
         </div>
