--- a/pages/woks.html
+++ b/pages/woks.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kanpeki Sushi & Assian Food, Río Tercero, Córdoba. Delivery & Take Away.">
+    <meta name="keywords" content="empanadas chinas, langostinos apanados, gyozas, ravioles de salmón, woks, arroz frito, chop suey, chow fan, chow mein">
+    <meta name="author" content="Mauricio Maldonado">
+    <meta name="copyright" content="kanpeki.sushi">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +19,7 @@
 <body class="body-menu">
     <!--inicio barra nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"><img src="../imagenes/logo.png" alt="logo"></a>
+      <a class="navbar-brand" href="#" id="entrada"><img src="../imagenes/logo.png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,12 +42,12 @@
     </nav>
       <!--fin barra nav-->
       <!--Boton flotante-->
-      <a href="#" class="boton_flotante"><img src="../imagenes/fuego.png" alt="fuego"></a>
+      <a href="#entrada" class="boton_flotante"><img src="../imagenes/fuego.png" alt="fuego"></a>
       <!--inicio main-->
-      <main class="menu-main">
+      <main class="menu-main" >
         <div class="menu-carta">
             <div class="menu-titulo">
-                <h2>Entradas</h2>
+                <h2 >Entradas</h2>
             </div>
             <div>
                 <div class="entrada_menu"> 
